--- a/rclone_gui.ipynb
+++ b/rclone_gui.ipynb
@@ -7,14 +7,17 @@
       "collapsed_sections": [
         "XpCFwQWZefCH",
         "pT6xF6HFUOfd",
-        "mrT2f4CpgsKO",
-        "-E3gMs4qiSY0",
         "1olPxcEBgL07",
         "SZLqroFMLUs1",
-        "gRN3utqAQrb0"
+        "OgHKr5ZdOw8G",
+        "aWCGGHmWOrGG",
+        "5DJokz_NBxm3",
+        "SOwK2NyFCGc7",
+        "V9te11yFCsHx"
       ],
       "mount_file_id": "1k2RYHOtIpApLte1iPpoOFFmFK5BKD-mZ",
-      "authorship_tag": "ABX9TyNOzE36HraCIDhLQBe+OWqC"
+      "authorship_tag": "ABX9TyP409hCdkKeBrNDZxTfDM13",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -25,6 +28,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/XekoFrontend/100-days-of-code-python/blob/main/rclone_gui.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -81,13 +94,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Modify remotes"
+      ],
+      "metadata": {
+        "id": "RQaFQBLqqCAB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Tạo mới, chỉnh sửa, xóa hoặc kiểm tra remote.\n",
         "!rclone config"
       ],
       "metadata": {
-        "id": "fj1w6avIgRNN"
+        "id": "fj1w6avIgRNN",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": []
@@ -95,10 +118,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 💾 **Backup file config**"
+        "Backup config"
       ],
       "metadata": {
-        "id": "mrT2f4CpgsKO"
+        "id": "8hPt4gIPp98Y"
       }
     },
     {
@@ -106,7 +129,7 @@
       "source": [
         "# Backup config\n",
         "!cp /root/.config/rclone/rclone.conf /content/rclone.conf\n",
-        "!rclone copy -v \"/content/rclone.conf\" \"/content/drive/MyDrive/Colab Notebooks/backup/rclone*.conf\""
+        "!rclone copy -v \"/content/rclone.conf\" \"/content/drive/MyDrive/Colab Notebooks/backup/rclone-renamed.conf\""
       ],
       "metadata": {
         "id": "mO5IAMs_gkke"
@@ -127,55 +150,33 @@
       "cell_type": "code",
       "source": [
         "# @title Basic: Copy files between Cloud Remotes\n",
+        "\n",
+        "source_remote = \"onedrive\" # @param [\"/content/drive/MyDrive/\",\"/content/\",\"googledrive1\",\"onedrive\",\"googledrive2\",\"archive\"]\n",
+        "input_folder = \"\" # @param {\"type\":\"string\",\"placeholder\":\"dùng `/` để phân cấp folder hoặc file, để trống là toàn bộ remote\"}\n",
+        "# @markdown ###Lưu ý:\n",
+        "# @markdown - nếu thêm `/` ở cuối, chỉ copy nội dung bên trong\n",
+        "# @markdown - nếu không dùng `/` ở cuối thì copy cả folder\n",
+        "# @markdown ---\n",
+        "destination_remote = \"archive\" # @param [\"archive\",\"onedrive\",\"googledrive2\",\"googledrive1\",\"/content/drive/MyDrive/\",\"/content/\"]\n",
+        "destination_folder = \"\" # @param {\"type\":\"string\",\"placeholder\":\"dùng `/` để phân cấp folder\"}\n",
+        "# @markdown ---\n",
         "# @markdown ### Hướng dẫn:\n",
-        "# @markdown - **Source Remote**: `remoteName:folder/`or `/content/drive/MyDrive/CBZ/image.jpg` .\n",
-        "# @markdown - **Destination Remote**:  `remoteName:folder/`.\n",
-        "source_remote = \"/content/drive/MyDrive/\" # @param [\"/content/drive/MyDrive/\",\"haocenter\",\"tsd06\",\"xuhao\",\"archive\"]\n",
-        "input_folder = \"\" # @param {\"type\":\"string\"}\n",
-        "# @markdown ---\n",
-        "destination_remote = \"archive\" # @param [\"archive\",\"tsd06\",\"xuhao\",\"haocenter\",\"/content/drive/MyDrive/\"]\n",
-        "destination_folder = \"tinhhe-lontien-thyetmin\" # @param {\"type\":\"string\"}\n",
+        "# @markdown - Copy bản mới (không dùng được trên archive): `--update`.\n",
+        "# @markdown - Bỏ qua các file đã tồn tại (**thường dùng trên archive.org**): `--ignore-existing`.\n",
+        "# @markdown - Chọn số luồng copy (nếu không dùng thì mặc định là 4)): `--transfers 8`.\n",
+        "# @markdown - Dùng cho S3 của Amazon (**archive.org dùng 1 luồng có vẻ nhanh**): `--s3-upload-concurrency 1`.\n",
+        "\n",
+        "option_flag = \"\" # @param {\"type\":\"string\",\"placeholder\":\"thêm `--flag` nếu cần, dùng space phân cách các flag\"}\n",
         "\n",
         "# Kiểm tra và thực thi lệnh copy\n",
         "if source_remote and destination_remote:\n",
         "    # Chạy lệnh rclone với thông báo chi tiết\n",
-        "    !rclone copy --update -v --transfers 8 \"{source_remote}:{input_folder}\" \"{destination_remote}:{destination_folder}\"\n",
+        "    !rclone copy -v \"{option_flag}\" \"{source_remote}:{input_folder}\" \"{destination_remote}:{destination_folder}\"\n",
         "else:\n",
         "    print(\"Lỗi: Vui lòng nhập cả Source Remote và Destination Remote.\")"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "4-5lI6wKiZ9a"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @title doing\n",
-        "\n",
-        "source_remote = \"/content/drive/MyDrive/\" # @param [\"/content/drive/MyDrive/\",\"haocenter\",\"tsd06\",\"xuhao\",\"archive\"]\n",
-        "input_folder = \"\" # @param {\"type\":\"string\"}\n",
-        "# @markdown ---\n",
-        "destination_remote = \"archive\" # @param [\"archive\",\"tsd06\",\"xuhao\",\"haocenter\",\"/content/drive/MyDrive/\"]\n",
-        "destination_folder = \"\" # @param {\"type\":\"string\"}\n",
-        "# @markdown ---\n",
-        "write_mode = \"--update\" # @param [\"--update\",\"--ignore-existing\"]\n",
-        "variable_name = \"--transfers 8\" # @param [\"--transfers 8\",\"--s3-upload-concurrency 1\"]\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Kiểm tra và thực thi lệnh copy\n",
-        "if source_remote and destination_remote:\n",
-        "  #👉if destination_remote = \"archive\":\n",
-        "    # Chạy lệnh rclone với thông báo chi tiết\n",
-        "    !rclone copy --update -v --transfers 8 \"{source_remote}:{input_folder}\" \"{destination_remote}:{destination_folder}\" {write_mode}\n",
-        "else:\n",
-        "    print(\"Lỗi: Vui lòng nhập cả Source Remote và Destination Remote.\")"
-      ],
-      "metadata": {
-        "id": "jK7Df_1u5KHl"
       },
       "execution_count": null,
       "outputs": []
@@ -237,7 +238,6 @@
         "    print(\"Lỗi: Vui lòng nhập cả Source Remote và Destination Remote. Xem hướng dẫn ở trên!\")"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "N-iQWNYVn9WC"
       },
       "execution_count": null,
@@ -515,6 +515,81 @@
       ],
       "metadata": {
         "id": "z2eZwK8FTJ_3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 📺 **yt-dlp**"
+      ],
+      "metadata": {
+        "id": "5DJokz_NBxm3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ⚙️ Install yt-dlp & ffmpeg\n",
+        "* ⚠️Chú ý dùng ! trước command\n",
+        "* Nếu lỗi 403 Forbidden, thêm --geo-bypass"
+      ],
+      "metadata": {
+        "id": "SOwK2NyFCGc7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install -U yt-dlp"
+      ],
+      "metadata": {
+        "id": "lDiNbMjZB7l4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!sudo apt install ffmpeg"
+      ],
+      "metadata": {
+        "id": "Qcwcr6HWCC0S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ⏬ Download\n",
+        "\n",
+        "\n",
+        "*   --write-subs --sub-lang en: chỉ tải sub english không tải file.\n",
+        "*   --all-subs: tải file và tất cả subtitle.\n",
+        "* --skip-download: bỏ qua không tải files\n",
+        "* -o: đặt tên file\n",
+        "* -P: path lưu\n",
+        "* -F: xem tất cả định dạng\n",
+        "* -f tải định dạng đã chọn\n",
+        "* !yt-dlp: tự chọn định dạng tốt nhất\n",
+        "* -v: để xem log\n",
+        "* --get-urlurl: tải .m3u8\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "V9te11yFCsHx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!yt-dlp --all-subs \"https://wetv.vip/vi/play/87t5rpu3kbh1qm8/\" -o \"Xin_Hay_Yeu_Em_E7\" -P \"Dame na Watashi ni Koishite Kudasai 2016\""
+      ],
+      "metadata": {
+        "id": "1i7aoGSoCvzC"
       },
       "execution_count": null,
       "outputs": []
